# viktor

./: .env.example  Cargo.toml
contract/: Move.toml
contract/sources/: starknet_validity.move  viktor.move
src/: aptos.rs  config.rs  lib.rs  madara.rs  task.rs
taplo/: taplo.toml
